--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Document</title> <link rel="stylesheet" href="style.css">  <link rel="stylesheet" href="fonts/fonts.css">
 </head>
 <body>
-    <body class="page">
-        <video class="page__video" autoplay loop muted src="video/cover-video.mp4"></video>
-        <h1 class="page__heading">Надо сделать идеально</h1>
-      </body>
+    <h1 class="title">Надо сделать идеально</h1>
+    <video class="video" autoplay loop muted playsinline src="video/cover-video.mp4"></video>
 </body>
 </html>
